spacing fixed

--- a/css/app.css
+++ b/css/app.css
@@ -96,7 +96,7 @@ h1 {
 .content {
   overflow-x: auto;
   overflow-y: hidden;
-  margin: 3% 0 0 0;
+  margin: 5% 0 0 0;
 }
 
 .portfolio-div {
